--- a/demo01/package.json
+++ b/demo01/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.13.1",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
