--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.4.5",
+    "mongoose": "^8.6.1",
     "nodemon": "^3.1.4"
   }
 }
