--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "firebase": "^10.13.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
