--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "firebase": "^10.13.2",
+    "firebase": "^10.14.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
+    "mongobd": "^0.0.1-security.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.3",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
-    "vite": "^5.4.7"
+    "vite": "^5.4.8"
   }
 }
